<resources>
    <string name="app_name">TP_IMC</string>
    <string name="poids">Poids :</string>
    <string name="taille">Taille :</string>
    <string name="mega_fonction">MEGA FONCTION !</string>
    <string name="text_result">Vous devez cliquer sur le bouton "Calculer Imc" pour obtenir un résultat.</string>
    <string name="raz">RAZ</string>
    <string name="txt_result">Résultat :</string>
    <string name="edit_taille">Taille</string>
    <string name="edit_poids">Poids</string>
    <string name="imcString">\Votre IMC est : </string>
    <string name="message_gentil">Vous êtes forcement magnifique !</string>
    <string name="mega_fctn">MEGA FONCTION !</string>
</resources>
